...
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground"
    android:padding="10dp">

    <ListView
        android:id="@+id/node_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createNoteButton"

        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

...
