...
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Hello World!"
        android:textSize="20sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/export_checkbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/note_text"
...
