...
        </menu>

    </item>



    <item android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_nightmode_toggle"
...
