<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
        <item android:id="@+id/checkable_sort"
            android:title="@string/storting_menue" >
            <menu xmlns:android="http://schemas.android.com/apk/res/android">
                <group android:checkableBehavior="single">
                    <item android:id="@+id/sort_alphabetical"
                        android:title="@string/alphabetical" />
                    <item android:id="@+id/sort_creation_date"
                        android:title="@string/creation_date" />
                </group>
            </menu>

        </item>

</menu>